// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToHtml(widget) <Inject /> nested widget renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>
      <ul>
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "nested--injected", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "nested--injected--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": [3, 8],
        "simple--injected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) <Inject /> regular component with mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div>
    <div data-reactroot="">Hello 🙂</div>
  </div>
</body>
`;

exports[`renderToHtml(widget) <Inject /> regular component without mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div class="mount-point">
    <div data-reactroot="">Hello 🙂</div>
  </div>
</body>
`;

exports[`renderToHtml(widget) <Inject /> simple widget with mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef" class="mount-point">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "simple--injected", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "simple--injected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) <Inject /> simple widget without mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "simple--injected", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "simple--injected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) <Inject /> styled nested widget renders correctly 1`] = `
<head>
  <style data-styled="true" data-styled-version="5.2.0">
    .dEKVyS {
      padding: 7px;
      background: #bbb;
    }

    /*!sc*/
    data-styled.g3[id="sc-dlnjPT"] {
      content: "dEKVyS,"
    }

    /*!sc*/
    .dfKzZy {
      margin: 7px;
      background: #666;
      color: #ddd;
    }

    /*!sc*/
    data-styled.g4[id="sc-hKFyIo"] {
      content: "dfKzZy,"
    }

    /*!sc*/
  </style>
</head>

<body>
  <div id="0123456789abcdef">
    <section class="sc-dlnjPT dEKVyS">
      <ul class="sc-hKFyIo dfKzZy">
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "nested-with-styles--injected", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "nested-with-styles--injected--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": [3, 8],
        "simple--injected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) onMeta child overrides parent; last sibling wins accumulates the expected data 1`] = `
Object {
  "maxAge": 60,
}
`;

exports[`renderToHtml(widget) onMeta parent overrides child; first sibling wins accumulates the expected data 1`] = `
Object {
  "maxAge": 30,
}
`;

exports[`renderToHtml(widget) useWidgetState() nested widget renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>
      <ul>
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "nested--hooked", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "nested--hooked--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": [3, 8],
        "simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) useWidgetState() regular component with mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div>
    <div data-reactroot="">Hello 🙂</div>
  </div>
</body>
`;

exports[`renderToHtml(widget) useWidgetState() regular component without mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div class="mount-point">
    <div data-reactroot="">Hello 🙂</div>
  </div>
</body>
`;

exports[`renderToHtml(widget) useWidgetState() simple widget with mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef" class="mount-point">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "simple--hooked", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) useWidgetState() simple widget without mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "simple--hooked", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;

exports[`renderToHtml(widget) useWidgetState() styled nested widget renders correctly 1`] = `
<head>
  <style data-styled="true" data-styled-version="5.2.0">
    .llCpDD {
      padding: 7px;
      background: #bbb;
    }

    /*!sc*/
    data-styled.g1[id="sc-bdnylx"] {
      content: "llCpDD,"
    }

    /*!sc*/
    .jLLzPg {
      margin: 7px;
      background: #666;
      color: #ddd;
    }

    /*!sc*/
    data-styled.g2[id="sc-gtssRu"] {
      content: "jLLzPg,"
    }

    /*!sc*/
  </style>
</head>

<body>
  <div id="0123456789abcdef">
    <section class="sc-bdnylx llCpDD">
      <ul class="sc-gtssRu jLLzPg">
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__WIDGET_DATA__", "nested-with-styles--hooked", "instances", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {}
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "nested-with-styles--hooked--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": [3, 8],
        "simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": 5
      }
    })
  </script>
</body>
`;
